# SABERES

./: .gitignore  app.py  config.csv  db.sqlite3  estructura_py.txt  pyproject.toml  render.yaml  requirements.txt
core/: cli.py  config_loader.py  loader.py  relaciones.py  ui.py
data/: 1ESO_GeH.xlsx  1ESO_LyL.xlsx  3ESO_GeH.xlsx  3ESO_GeH_tablaCruda.xlsx
requirements_files/: behaviors-4414ad8b510b.js  copilot-chat-5ec706570503.js  element-registry-c20bd0705df8.js  global-b6cb3703b934.css  global-copilot-menu-a27942455cba.js  primer-react-350730ea92ff.js  primer-react.eebd62883c61d2053717.module.css  react-code-view-dc25bb4df9c7.js  react-core-a8203875c6f9.js  ui_packages_app-uuid_app-uuid_ts-ui_packages_document-metadat.js  ui_packages_code-view-shared_utilities_web-worker_ts-ui_packa.js  ui_packages_copilot-chat_components_ChatInput_tsx-ui_packages.js  ui_packages_copilot-chat_components_Chat_tsx-ui_packages_icon.js  ui_packages_copilot-chat_hooks_use-chat-message-behavior_ts-.css  ui_packages_copilot-chat_hooks_use-chat-message-behavior_ts-u.js  ui_packages_copilot-chat_utils_CopilotChatContext_tsx-19d8b09.js  ui_packages_copilot-chat_utils_copilot-chat-helpers_ts-0601fd.js  ui_packages_copilot-markdown_MarkdownRenderer_tsx-f0c37570649.js  ui_packages_item-picker_constants_labels_ts-ui_packages_item-.js  ui_packages_paths_index_ts-8a20a6d3af54.js  ui_packages_promise-with-resolvers-polyfill_promise-with-reso.js  vendors-node_modules_emotion_is-prop-valid_dist_emotion-is-pr.js  vendors-node_modules_github_combobox-nav_dist_index_js-node_m.js  (+1 more)
templates/: base.html  (+1 more)
(+76 files in other folders)
